Fixed About us Slide on small devices

--- a/app/styles/_about.scss
+++ b/app/styles/_about.scss
@@ -76,6 +76,8 @@
     .about-with-bubble-slide {
       min-height: 460px;
       position: relative;
+      padding-left: 80px;
+      padding-right: 80px;
 
       .slide {
         width: 100%;
@@ -94,11 +96,11 @@
           right: auto;
           margin-right: 20px;
           max-width: 800px;
+          padding-left: 150px;
+          padding-right: 150px;
         }
 
         .slide-body {
-          margin-left: 150px;
-          margin-right: 150px;
           position: relative;
           width: 100%;
         }
@@ -130,8 +132,8 @@
 
 
         .slide-item {
+          margin: auto;
           width: 100%;
-          height: 100%;
           padding-top: 80px;
           padding-bottom: 80px;
           text-align: center;
@@ -140,18 +142,22 @@
           line-height: 1.5;
           visibility: hidden;
           opacity: 0;
-          transition: visibility 2s, opacity 2s;
+          transition: .6s;
           max-width: 500px;
-          position: absolute;
           top: 0;
           bottom: 0;
           left: 0;
           right: 0;
+          position: absolute;
+          top: -50px;
         }
 
         .slide-item.active {
+          position: relative;
+          transition: 1s;
           visibility: visible;
           opacity: 1;
+          top: 0;
         }
       }
     }
